# data-product-hub

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.engine  Dockerfile.operator  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
charts/data-product-hub/: Chart.yaml  values.yaml
charts/data-product-hub/config/data-products/: southafrica-scheduled-outage.yaml
charts/data-product-hub/sample-data/south-africa-outages/: areas.parquet
charts/data-product-hub/templates/: _helpers.tpl  configmap-products.yaml  crd-dataproducts.yaml  deployment.yaml  engine-deployment.yaml  engine-pvc.yaml  engine-service.yaml  ingress.yaml  operator-deployment.yaml  operator-rbac.yaml  operator-serviceaccount.yaml  pvc-data.yaml  service.yaml
examples/southafrica-scheduled-outage/: areas.parquet  data-product.yaml
examples/southafrica-scheduled-outage/sample-data/: schedule.parquet
sample-data/south-africa-outages/: areas.csv  outageslots.csv
src/data_product_hub/: datasets.yml  main.py  registry.py
src/engine/: __init__.py  main.py
src/engine/odata/: __init__.py  filter.py  registry.py  router.py
src/engine/security/: authorization.py  config.py  dependency.py  entitlements.py  jwt_auth.py
src/odata/: __init__.py  filter.py  registry.py  router.py
src/operator/: main.py
src/operator/handlers/: __init__.py  dataproduct_handler.py
tests/: __init__.py  test_southafrica_product.py
